--- a/content/python-cookbook.ipynb
+++ b/content/python-cookbook.ipynb
@@ -211,7 +211,7 @@
     "\n",
     "y = np.arange(0.0,  2*np.pi, 0.1)    # create y values\n",
     "\n",
-    "X, Y = np.meshgrid(x,y)           # tunring 1D array into 2D grids of x and y values\n",
+    "X, Y = np.meshgrid(x,y)           # turn 1D array into 2D grids of x and y values\n",
     "\n",
     "Z = np.sin(X) * np.cos(Y)           # feed 2D grids to our 2D function f(x,y)\n",
     "\n",
