--- a/content/waves-1d.ipynb
+++ b/content/waves-1d.ipynb
@@ -492,7 +492,7 @@
     "   \n",
     "\n",
     "        \n",
-    "    fig, ax = plt.figure(figsize=(9,6))            \n",
+    "    fig, ax = plt.subplots(figsize=(9,6))            \n",
     "    ax      = plt.axes(projection='3d')   # Making a 3D plot     \n",
     "   \n",
     "    ax.set_zlim([-2.0,2.0])\n",
