--- a/content/waves-1d.ipynb
+++ b/content/waves-1d.ipynb
@@ -31,7 +31,7 @@
     "### Standing and traveling waves in 1D\n",
     "\n",
     "We beging by plotting a simple periodic function using numpy (np) and matplotlib.pyplot (plt) \n",
-    "$$y = sin(kx)=sin\\Big(2\\pi \\cdot \\frac{x}{\\lambda}\\Big)$$"
+    "$$y = \\sin(kx)=\\sin\\left(\\frac{2\\pi}{\\lambda} x\\right)$$"
    ]
   },
   {
