--- a/content/waves-1d.ipynb
+++ b/content/waves-1d.ipynb
@@ -418,7 +418,7 @@
     "    t=0\n",
     "    omega=1\n",
     "    \n",
-    "    Lx,Ly = 1,1                       # size of memrbante\n",
+    "    Lx,Ly = 1,1                       # size of membrane\n",
     "    N=40                              # number of grid points along X and Y\n",
     "    \n",
     "    xs = np.linspace(0,Lx,N)\n",
@@ -478,7 +478,7 @@
     "    \n",
     "    omega=1\n",
     "    \n",
-    "    L=1                       # size of memrbante\n",
+    "    L=1                       # size of membrane\n",
     "    N=40                      # number of grid points along X and Y\n",
     "    \n",
     "    x = np.linspace(0,L,N)\n",
