--- a/demos/hydrogen_wavefunctions.ipynb
+++ b/demos/hydrogen_wavefunctions.ipynb
@@ -102,14 +102,10 @@
         "id": "e4c01d98"
       },
       "source": [
-        "<img src='https://raw.githubusercontent.com/cmd098/hydrogen-wavefunctions/main/img/angular_function.png' width=460 align=\"left\"/>"
+        "$$\n",
+        "Y_{lm}(\\phi,\\theta) = \\sqrt{\\frac{2l+1}{4\\pi} \\frac{(l-m)!}{(l+m)!} } P_{lm}(cos \\phi) \\cdot e^{im\\theta}\n",
+        "$$"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "d8c93395",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
