--- a/_sources/demos/hydrogen_wavefunctions.ipynb
+++ b/_sources/demos/hydrogen_wavefunctions.ipynb
@@ -32,11 +32,7 @@
         "import matplotlib, matplotlib.pyplot as plt\n",
         "import scipy, scipy.special as sp\n",
         "import seaborn as sns\n",
-        "import numpy as np\n",
-        "\n",
-        "# Set custom matplotlib default font\n",
-        "plt.rcParams['font.family'] = 'STIXGeneral'\n",
-        "plt.rcParams['mathtext.fontset'] = 'stix'"
+        "import numpy as np"
       ]
     },
     {
@@ -51,19 +47,11 @@
     },
     {
       "cell_type": "markdown",
-      "id": "12647bee",
-      "metadata": {
-        "id": "12647bee"
-      },
-      "source": [
-        "<img src='https://raw.githubusercontent.com/cmd098/hydrogen-wavefunctions/main/img/radial_function.png' width=470 align=\"left\"/>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "e44089bc",
       "metadata": {},
-      "source": []
+      "source": [
+        "$$R_{nl} = \\sqrt{ \\Big( \\frac{2}{n a_0} \\Big)^3 \\frac{(n-l-1)!}{2n(n+l)!}} \\cdot e^{-\\frac{r}{n a_0}} \\cdot \\Big( \\frac{2 r}{n a_0} \\Big)^l \\cdot L^{2l+1}_{n-l-1}\\Big( \\frac{2 r}{n a_0} \\Big)$$"
+      ]
     },
     {
       "cell_type": "code",
@@ -74,15 +62,19 @@
       },
       "outputs": [],
       "source": [
-        "# Rnl(r) normalized radial function\n",
+        "def radial_function(n, \n",
+        "                    l, \n",
+        "                    r, \n",
+        "                    a0):\n",
+        "  '''Rnl(r) normalized radial function'''\n",
         "\n",
-        "def radial_function(n, l, r, a0):\n",
+        "    prefactor = np.sqrt( ((2 / n * a0) ** 3 * (np.math.factorial(n - l - 1))) / (2 * n * (np.math.factorial(n + l))) )\n",
+        "\n",
         "    laguerre = sp.genlaguerre(n - l - 1, 2 * l + 1)\n",
+        "\n",
         "    p = 2 * r / (n * a0)\n",
         "\n",
-        "    return np.sqrt(\n",
-        "        ((2 / n * a0) ** 3 * (np.math.factorial(n - l - 1))) / (2 * n * (np.math.factorial(n + l)))\n",
-        "    ) * np.exp(-p / 2) * (p ** l) * laguerre(p)"
+        "    return  prefactor * np.exp(-p / 2) * (p ** l) * laguerre(p)"
       ]
     },
     {
@@ -116,14 +108,20 @@
       },
       "outputs": [],
       "source": [
-        "# Ylm(θ,φ) normalized angular function\n",
+        "def angular_function(m, \n",
+        "                     l, \n",
+        "                     theta, \n",
+        "                     phi):\n",
+        "                     \n",
+        "    '''Ylm(θ,φ) normalized angular function'''\n",
         "\n",
-        "def angular_function(m, l, theta, phi):\n",
         "    legendre = sp.lpmv(m, l, np.cos(theta))\n",
         "\n",
-        "    return ((-1) ** m) * np.sqrt(\n",
-        "        ((2 * l + 1) * np.math.factorial(l - np.abs(m)))\n",
-        "        / (4 * np.pi * np.math.factorial(l + np.abs(m)))) * legendre * np.real(np.exp(1.j * m * phi))"
+        "    prefactor = ((-1) ** m) * np.sqrt( ( (2 * l + 1) * np.math.factorial(l - np.abs(m)) )\n",
+        "                                      / (4 * np.pi * np.math.factorial(l + np.abs(m)))\n",
+        "                                      )\n",
+        "\n",
+        "    return  prefactor * legendre * np.real(np.exp(1.j * m * phi))"
       ]
     },
     {
@@ -133,24 +131,16 @@
         "id": "220c9929"
       },
       "source": [
-        "#### 3. Describing the normalized wavefunction $\\psi _{nlm}(r,\\theta ,\\varphi)$ as a product of  $R_{nl}(r)\\cdot Y_{l}^{m}(\\theta, \\varphi)$"
+        "#### 3. Describing the normalized probability as wavefunction squared $|\\psi _{nlm}(r,\\theta ,\\varphi)|^2$ "
       ]
     },
     {
       "cell_type": "markdown",
-      "id": "e21a7177",
-      "metadata": {
-        "id": "e21a7177"
-      },
-      "source": [
-        "<img src='https://raw.githubusercontent.com/cmd098/hydrogen-wavefunctions/main/img/normalized_wf.png' width=540 align=\"left\"/>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "14dea539",
+      "id": "745b9d6d",
       "metadata": {},
-      "source": []
+      "source": [
+        "$$\\psi_{nlm} = R_{nl}(r)\\cdot Y_{l}^{m}(\\theta, \\varphi)"
+      ]
     },
     {
       "cell_type": "code",
@@ -186,7 +176,7 @@
         "id": "302d61f2"
       },
       "source": [
-        "#### 4. Producing wavefunction electron probability density plots"
+        "#### 4. Plotting wavefunction electron probability density plots"
       ]
     },
     {
@@ -198,33 +188,27 @@
       },
       "outputs": [],
       "source": [
-        "# Solving the normalized wavefunction and plotting its electron probability density\n",
-        "# dark_palette: Displays a plot with less brightness (optional parameter | default: False)\n",
-        "\n",
-        "def plot_wavefunction(n, l, m, a0, dark_palette=False):\n",
+        "def plot_wavefunction(n, \n",
+        "                      l, \n",
+        "                      m, \n",
+        "                      a0 ):\n",
         "\n",
         "    fig, ax = plt.subplots()\n",
-        "\n",
-        "    # Plot probability density figure\n",
         "    im = ax.imshow(np.sqrt(normalized_wavefunction(n, l, m, a0)), cmap='rocket')\n",
         "\n",
         "    # Add colorbar\n",
         "    cbar = plt.colorbar(im, fraction=0.046, pad=0.03)\n",
         "    cbar.set_ticks([])\n",
         "\n",
-        "    # Apply dark palette if requested\n",
-        "    if dark_palette:\n",
-        "        fig.patch.set_facecolor('#020419'); cbar.outline.set_visible(False)\n",
-        "        plt.rcParams['text.color']='#dfdfdf'; ax.tick_params(axis='x', colors='#c4c4c4')\n",
-        "        ax.tick_params(axis='y', colors='#c4c4c4')\n",
+        "    # Apply dark palette \n",
+        "    fig.patch.set_facecolor('#020419'); cbar.outline.set_visible(False)\n",
+        "    plt.rcParams['text.color']='#dfdfdf'; ax.tick_params(axis='x', colors='#c4c4c4')\n",
+        "    ax.tick_params(axis='y', colors='#c4c4c4')\n",
         "\n",
-        "        ax.spines['top'].set_color('#020419'); ax.spines['right'].set_color('#020419')\n",
-        "        ax.spines['bottom'].set_color('#c4c4c4'); ax.spines['left'].set_color('#c4c4c4')\n",
-        "        ax.set_title('Hydrogen Wavefunction probability density', pad=20, fontsize=15, color='#dfdfdf')\n",
-        "    else:\n",
-        "        plt.rcParams['text.color']='#000000'; ax.tick_params(axis='x', colors='#000000')\n",
-        "        ax.tick_params(axis='y', colors='#000000')\n",
-        "        ax.set_title('Hydrogen Wavefunction probability density', pad=20, fontsize=15, color='#000000')\n",
+        "    ax.spines['top'].set_color('#020419'); ax.spines['right'].set_color('#020419')\n",
+        "    ax.spines['bottom'].set_color('#c4c4c4'); ax.spines['left'].set_color('#c4c4c4')\n",
+        "    ax.set_title('Hydrogen Wavefunction probability density', pad=20, fontsize=15, color='#dfdfdf')\n",
+        "\n",
         "\n",
         "    # Add text and labels\n",
         "    ax.invert_yaxis()\n",
@@ -233,9 +217,8 @@
         "    ax.text(780, 660, '+', fontsize=16)\n",
         "    ax.text(780, 0, '−', fontsize=16)\n",
         "\n",
-        "    # Save and display plot\n",
-        "    plt.savefig(f'wavefunction ({n},{l},{m}).png', dpi=245, bbox_inches='tight', pad_inches=0.3)\n",
-        "    plt.show()"
+        "    # Save plot\n",
+        "    plt.savefig(f'wavefunction ({n},{l},{m}).png', dpi=245, bbox_inches='tight', pad_inches=0.3)"
       ]
     },
     {
@@ -286,8 +269,7 @@
         "plot_wavefunction(n=2, \n",
         "                  l=1, \n",
         "                  m=0, \n",
-        "                  ml=0.6, \n",
-        "                  dark_palette=False)  "
+        "                  ml=0.6)  "
       ]
     }
   ],
