--- a/demos/hydrogen_wavefunctions.ipynb
+++ b/demos/hydrogen_wavefunctions.ipynb
@@ -151,12 +151,13 @@
       },
       "outputs": [],
       "source": [
-        "# Ψnlm(r,θ,φ) normalized wavefunction\n",
-        "# by definition of quantum numbers n, l, m and a bohr radius augmentation coefficient\n",
+        "def normalized_wavefunction(n, \n",
+        "                            l, \n",
+        "                            m, \n",
+        "                            a0=0.6):\n",
         "\n",
-        "def normalized_wavefunction(n, l, m, a0):\n",
-        "\n",
-        "    # Bohr radius (a0) augmentation\n",
+        "    '''Ψnlm(r,θ,φ) normalized wavefunction\n",
+        "    by definition of quantum numbers n, l, m and a bohr radius augmentation coefficient'''\n",
         "    a0 = 5.29e-11 * (1e+12 * a0)\n",
         "\n",
         "    # Set coordinates grid to assign a certain probability to each point (x, y) in the plane\n",
@@ -191,7 +192,7 @@
         "def plot_wavefunction(n, \n",
         "                      l, \n",
         "                      m, \n",
-        "                      a0 ):\n",
+        "                      a0=0.6):\n",
         "\n",
         "    fig, ax = plt.subplots()\n",
         "    im = ax.imshow(np.sqrt(normalized_wavefunction(n, l, m, a0)), cmap='rocket')\n",
@@ -268,8 +269,7 @@
       "source": [
         "plot_wavefunction(n=2, \n",
         "                  l=1, \n",
-        "                  m=0, \n",
-        "                  ml=0.6)  "
+        "                  m=0)  "
       ]
     }
   ],
