--- a/_sources/demos/hydrogen_wavefunctions.ipynb
+++ b/_sources/demos/hydrogen_wavefunctions.ipynb
@@ -139,7 +139,7 @@
       "id": "745b9d6d",
       "metadata": {},
       "source": [
-        "$$\\psi_{nlm} = R_{nl}(r)\\cdot Y_{l}^{m}(\\theta, \\varphi)"
+        "$$\\psi_{nlm} = R_{nl}(r) \\cdot Y_{l}^{m}(\\theta, \\varphi)$$"
       ]
     },
     {
