--- a/demos/hydrogen_wavefunctions.ipynb
+++ b/demos/hydrogen_wavefunctions.ipynb
@@ -271,6 +271,31 @@
         "                  l=1, \n",
         "                  m=0)  "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5e93add3",
+      "metadata": {},
+      "source": [
+        "### Interactive plot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5abfbf8f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import holoviews as hv\n",
+        "hv.extension('bokeh')\n",
+        "\n",
+        "psi = np.sqrt(normalized_wavefunction(n=1, l=0, m=0, a0=0.6))\n",
+        "\n",
+        "img = hv.Image( psi )\n",
+        "\n",
+        "img"
+      ]
     }
   ],
   "metadata": {
