--- a/_sources/demos/hydrogen_wavefunctions.ipynb
+++ b/_sources/demos/hydrogen_wavefunctions.ipynb
@@ -287,8 +287,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import holoviews as hv\n",
-        "hv.extension('bokeh')\n",
+        "import holoviews as hv \n",
+        "\n",
+        "hv.extension('plotly')\n",
         "\n",
         "psi = np.sqrt(normalized_wavefunction(n=1, l=0, m=0, a0=0.6))\n",
         "\n",
