--- a/math/sympy.ipynb
+++ b/math/sympy.ipynb
@@ -295,6 +295,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Definite Integral example**\n",
+    "\n",
+    "$$\n",
+    "\\int_{0}^{\\ln(4)} \\frac{e^x \\cdot d x} {\\sqrt(e^{2x} + 9)}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy import integrate, sqrt, exp, log\n",
+    "\n",
+    "integrate(exp(x) / sqrt(exp(2*x) + 9), (x, 0, log(4)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercises\n",
     "\n",
     "1. Factor the following polynomial using SymPy: $x^2 + x – 6$\n",
