--- a/cookbook.ipynb
+++ b/cookbook.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scratchpad\n",
-    "\n",
-    "- This is an empty notebook for experimenting with code using Google Colab\n",
-    "- Some of the basic libraries are imported"
+    "## Scratchpad"
    ]
   },
   {
@@ -16,13 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load the basics\n",
     "import numpy as np    \n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "# Load units\n",
     "import scipy\n",
     "from   scipy.constants import physical_constants\n",
     "from scipy.constants import hbar, h, c, m_e, Rydberg, e, N_A\n",
@@ -36,7 +31,9 @@
    "source": [
     "### Example Problem \n",
     "- Compute the de Broglie wavelength for electron moving with speed of $3\\cdot 10^5 m/s$\n",
-    "- Plot how de Broglie wavelength  depends on speed of electron"
+    "- Plot how de Broglie wavelength  depends on speed of electron\n",
+    "\n",
+    "> Use this notebook as your scratchpad. All important libs are deleted. Feel free to delete the simple example below"
    ]
   },
   {
@@ -58,13 +55,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deb_wavl(v):\n",
+    "def deb_wavl(vm mass= m_e):\n",
+    "    '''This functionrequires velocity input and returns de Broglie wavelength in SI units \n",
+    "    Default mass is set to electron mass but you can also change'''\n",
     "\n",
-    "    return h/(m_e * v)\n",
+    "    return h/(mass * v)\n",
     "\n",
     "v= np.linspace(1, 1e10)\n",
     "\n",
-    "plt.plot(v, deb_wavl(v))"
+    "plt.loglog(v, deb_wavl(v))\n",
+    "plt.xlabel('velocity (m/s)')\n",
+    "plt.ylabel('de Broglie wavelength (m)')\n",
+    "plt.title('De Broglie wavelength vs velocity')"
    ]
   }
  ],
