--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scratchpad"
+    "## Scratchpad\n",
+    "> Use this notebook as your scratchpad. All important libs are deleted. Feel free to delete the simple example below"
    ]
   },
   {
@@ -21,7 +22,6 @@
     "import scipy\n",
     "from   scipy.constants import physical_constants\n",
     "from scipy.constants import hbar, h, c, m_e, Rydberg, e, N_A\n",
-    "\n",
     "#print( physical_constants['Planck constant'] ) # Value, unit, uncertainty"
    ]
   },
@@ -29,11 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example Problem \n",
+    "**Example Problem**\n",
     "- Compute the de Broglie wavelength for electron moving with speed of $3\\cdot 10^5 m/s$\n",
-    "- Plot how de Broglie wavelength  depends on speed of electron\n",
-    "\n",
-    "> Use this notebook as your scratchpad. All important libs are deleted. Feel free to delete the simple example below"
+    "- Plot how de Broglie wavelength  depends on speed of electron"
    ]
   },
   {
