'example problem complete'

--- a/cookbook.ipynb
+++ b/cookbook.ipynb
@@ -29,9 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example Problem**\n",
-    "- Compute the de Broglie wavelength for electron moving with speed of $3\\cdot 10^5 m/s$\n",
-    "- Plot how de Broglie wavelength  depends on speed of electron"
+    "**Example Problem:** Plot how de Broglie wavelength  depends on speed of electron. Compte wavelngth at speed of $10^5 m/s$."
    ]
   },
   {
@@ -40,28 +38,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_e = 3e5\n",
-    "\n",
-    "l = h/(m_e *v_e)\n",
-    "\n",
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def deb_wavl(vm mass= m_e):\n",
+    "def deb_wavl(v, mass= m_e):\n",
     "    '''This functionrequires velocity input and returns de Broglie wavelength in SI units \n",
     "    Default mass is set to electron mass but you can also change'''\n",
     "\n",
     "    return h/(mass * v)\n",
     "\n",
-    "v= np.linspace(1, 1e10)\n",
+    "#Compute\n",
+    "print( deb_wavl(v=1e5) )\n",
     "\n",
+    "# Plot\n",
+    "v= np.linspace(1, 1e10)\n",
     "plt.loglog(v, deb_wavl(v))\n",
+    "\n",
     "plt.xlabel('velocity (m/s)')\n",
     "plt.ylabel('de Broglie wavelength (m)')\n",
     "plt.title('De Broglie wavelength vs velocity')"
