--- a/_sources/demos/waves.ipynb
+++ b/_sources/demos/waves.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizing and animating waves via python.  "
+    "## Visualizing waves  "
    ]
   },
   {
