--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "## Scratchpad\n",
-    "> Use this notebook as your scratchpad. All important libs are deleted. Feel free to delete the simple example below"
+    "\n",
+    "**Use this notebook to solve problems and expeiment with coding.** All important libs are imported. See below for a simple example. Feel free to delete and write your own code"
    ]
   },
   {
@@ -16,13 +17,13 @@
    "source": [
     "import numpy as np    \n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
     "import ipywidgets as widgets\n",
-    "\n",
     "import scipy\n",
     "from   scipy.constants import physical_constants\n",
     "from scipy.constants import hbar, h, c, m_e, Rydberg, e, N_A\n",
-    "#print( physical_constants['Planck constant'] ) # Value, unit, uncertainty"
+    "#print( physical_constants['Planck constant'] ) # Value, unit, uncertainty\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format='retina'"
    ]
   },
   {
