--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -46,7 +46,7 @@
     "    return h/(mass * v)\n",
     "\n",
     "#Compute\n",
-    "print('Wavelength of electron traveling with speed $10^5$ m/s is ' deb_wavl(v=1e5) )\n",
+    "print('Wavelength of electron traveling with speed $10^5$ m/s is', deb_wavl(v=1e5) )\n",
     "\n",
     "# Plot\n",
     "v= np.linspace(1, 1e10)\n",
