--- a/cookbook.ipynb
+++ b/cookbook.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## Scratchpad\n",
     "\n",
-    "**Use this notebook to solve problems and expeiment with coding.** All important libs are imported. See below for a simple example. Feel free to delete and write your own code"
+    "- **Use this notebook to solve problems and expeiment with coding.** \n",
+    "- All important libs are imported. See below for a simple example. Feel free to delete and write your own code\n",
+    "- **Example Problem:** Plot how de Broglie wavelength  depends on speed of electron. Compte wavelngth at speed of $10^5 m/s$."
    ]
   },
   {
@@ -15,22 +17,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np    \n",
+    "import numpy as np  \n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets\n",
-    "import scipy\n",
-    "from   scipy.constants import physical_constants\n",
-    "from scipy.constants import hbar, h, c, m_e, Rydberg, e, N_A\n",
-    "#print( physical_constants['Planck constant'] ) # Value, unit, uncertainty\n",
+    "from ipywidgets import interact\n",
+    "import scipy  \n",
+    "from scipy.constants import physical_constants, hbar, h, c, m_e, Rydberg, e, N_A\n",
+    "\n",
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Example Problem:** Plot how de Broglie wavelength  depends on speed of electron. Compte wavelngth at speed of $10^5 m/s$."
    ]
   },
   {
