--- a/demos/BackBody.ipynb
+++ b/demos/BackBody.ipynb
@@ -53,6 +53,17 @@
     "  plt.grid()\n",
     "  plt.show();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intensity(T=5000)\n",
+    "intensity(T=6000)\n",
+    "intensity(T=8000)"
+   ]
   }
  ],
  "metadata": {
