--- a/demos/BlackBody.ipynb
+++ b/demos/BlackBody.ipynb
@@ -24,9 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "tags": ["hide-input"],
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'interact' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39m@interact\u001b[39m(T\u001b[39m=\u001b[39m(\u001b[39m1000\u001b[39m, \u001b[39m10000\u001b[39m))\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mintensity\u001b[39m(T\u001b[39m=\u001b[39m\u001b[39m5000\u001b[39m):\n\u001b[1;32m      3\u001b[0m \u001b[39m  \u001b[39m\u001b[39m'''Temperature in Kelvin, returns intensity of radiation'''\u001b[39;00m\n\u001b[1;32m      5\u001b[0m   \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconstants\u001b[39;00m \u001b[39mimport\u001b[39;00m h, c, k\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'interact' is not defined"
+     ]
+    }
+   ],
    "source": [
     "@interact(T=(1000, 10000))\n",
     "def intensity(T=5000):\n",
@@ -67,8 +80,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
