'test metadata hide'

--- a/demos/BlackBody.ipynb
+++ b/demos/BlackBody.ipynb
@@ -16,7 +16,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import interact\n",
-    "import ipywidgets as widgets\n",
     "\n",
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'"
@@ -25,8 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "tags": ["hide-input"],
-   "metadata": {},
+   "metadata": {"tags": [
+        "hide-input",
+    ]},
    "outputs": [
     {
      "ename": "NameError",
