--- a/_sources/demos/BlackBody.ipynb
+++ b/_sources/demos/BlackBody.ipynb
@@ -24,10 +24,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
-    "@interact(T=(1000, 10000))\n",
     "def intensity(T=5000):\n",
     "  '''Temperature in Kelvin, returns intensity of radiation'''\n",
     "\n",
@@ -50,7 +57,12 @@
     "  plt.ylim(1,    1e14)\n",
     "  plt.xlim(1, 3000)\n",
     "  plt.grid()\n",
-    "  plt.show();"
+    "  plt.show();\n",
+    "\n",
+    "####\n",
+    "intensity(T=5000)\n",
+    "intensity(T=6000)\n",
+    "intensity(T=8000)"
    ]
   },
   {
@@ -58,16 +70,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "intensity(T=5000)\n",
-    "intensity(T=6000)\n",
-    "intensity(T=8000)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -82,9 +90,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
