--- a/cookbook.ipynb
+++ b/cookbook.ipynb
@@ -6,14 +6,13 @@
    "source": [
     "## Scratchpad\n",
     "\n",
-    "- **Use this notebook to solve problems and expeiment with coding.** \n",
-    "- All important libs are imported. See below for a simple example. Feel free to delete and write your own code\n",
-    "- **Example Problem:** Plot how de Broglie wavelength  depends on speed of electron. Compte wavelngth at speed of $10^5 m/s$."
+    "- **Use this notebook to solve problems and expeiment with coding** \n",
+    "- **Try prompting ChatGPT to:** *Plot black body radiation intensity as a function of wavelength for three different temperatures.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,34 +20,10 @@
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import interact\n",
     "import scipy  \n",
-    "from scipy.constants import physical_constants, hbar, h, c, m_e, Rydberg, e, N_A\n",
+    "from scipy.constants import physical_constants, hbar, h, c, k, m_e, Rydberg, e, N_A\n",
     "\n",
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def deb_wavl(v, mass= m_e):\n",
-    "    '''This functionrequires velocity input and returns de Broglie wavelength in SI units \n",
-    "    Default mass is set to electron mass but you can also change'''\n",
-    "\n",
-    "    return h/(mass * v)\n",
-    "\n",
-    "#Compute\n",
-    "print('Wavelength of electron traveling with speed $10^5$ m/s is', deb_wavl(v=1e5) )\n",
-    "\n",
-    "# Plot\n",
-    "v= np.linspace(1, 1e10)\n",
-    "plt.loglog(v, deb_wavl(v))\n",
-    "\n",
-    "plt.xlabel('velocity (m/s)')\n",
-    "plt.ylabel('de Broglie wavelength (m)')\n",
-    "plt.title('De Broglie wavelength vs velocity')"
    ]
   }
  ],
@@ -68,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.11.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
