'align images of Bohr's model

--- a/ch01/Photoelectric.ipynb
+++ b/ch01/Photoelectric.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import interact\n",
+    "from ipywidgets import interact, interactive\n",
     "from scipy.constants import h, c, k, e, N_A\n",
     "\n",
     "%matplotlib inline\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "947e6d12386a463da20026158e92c839",
+       "model_id": "1813bf81dee844c48f244d9ce3cde164",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,9 +79,8 @@
        "interactive(children=(FloatSlider(value=1000000000000000.0, description='frequency', max=3000000000000000.0, s…"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -91,6 +90,13 @@
     "output.layout.height = '350px'\n",
     "interactive_plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -109,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
