'fix cnumber notebook'

--- a/ch02/waves.ipynb
+++ b/ch02/waves.ipynb
@@ -11496,6 +11496,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.animation import FuncAnimation\n",
+    "from matplotlib import rc\n",
+    "rc('animation', html='html5')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -11526,8 +11537,6 @@
     }
    ],
    "source": [
-    "from matplotlib.animation import FuncAnimation\n",
-    "\n",
     "# Parameters for the traveling wave\n",
     "\n",
     "A = 1.0          # Amplitude\n",
