--- a/_sources/ch02/bonus_waves.ipynb
+++ b/_sources/ch02/bonus_waves.ipynb
@@ -4,15 +4,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Bonus challenge for Chapter 2\n",
-        "**Waves, interference, normal modes and music.**  "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "**prerequisites**\n",
+        "## Bonus challenge \n",
+        "\n",
+        "**Waves, normal modes and interference** \n",
+        "\n",
+        "**Prerequisites**\n",
         "- Go over the demo notebook on waves.\n",
         "- Go over the python essentials to know how to use numpy/matplotlib. \n",
         "\n",
@@ -21,7 +17,7 @@
         "- Add code below each problem. \n",
         "- Run the code in Google Collab then download the file either as *.ipynb or *py file.\n",
         "- Submit your file to Canvas\n",
-        "- Do not forget that Google Collab deletes files if you do not save them iin your Google Drive\n"
+        "- Do not forget that Google Collab deletes files if you do not save them iin your Google Drive"
       ]
     },
     {
@@ -44,7 +40,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Question-1: Combining normal modes \n",
+        "### Problem 1: Combining normal modes \n",
         "\n",
         "- Recreate figures 2.4, 2.6 and 2.7 in the book using the example of normal modes.\n",
         "\n",
@@ -55,7 +51,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Question-2: Making traveling waves and creating interactive widgets.\n",
+        "### Problem 2: Making traveling waves and creating interactive widgets.\n",
         "\n",
         "Using the examples provided on interactive section about waves make a 1D plots of the following functions over a range of values x. You may want to use python functions similiar to the examples <br>  Set $\\sigma=1$ and $\\lambda=1$ \n",
         "- $f(x)=e^{-{x/\\sigma}^2}$ \n",
@@ -74,7 +70,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Question-3: Beats and music"
+        "### Problem 3: Beats and music"
       ]
     },
     {
@@ -100,7 +96,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Question-4: Interference of spherical waves"
+        "### Problem 4 Interference of spherical waves"
       ]
     },
     {
