--- a/_sources/ch02/demo_waves.ipynb
+++ b/_sources/ch02/demo_waves.ipynb
@@ -11358,7 +11358,7 @@
     "    mode2 = np.cos(omega*t + phi) * np.sin(n2*np.pi * x/L)\n",
     "    \n",
     "    plt.plot(x, mode1+mode2, lw=5, color='orange')\n",
-    "    \n",
+    "    plt.show()\n",
     "    plt.ylim([-2.5,2.5])\n",
     "    plt.grid('on')"
    ]
