--- a/ch02/bonus_waves.ipynb
+++ b/ch02/bonus_waves.ipynb
@@ -9,15 +9,16 @@
         "**Waves, normal modes and interference** \n",
         "\n",
         "**Prerequisites**\n",
-        "- Go over the demo notebook on waves.\n",
-        "- Go over the python essentials to know how to use numpy/matplotlib. \n",
+        "- Go over the [demo notebook on waves](https://dpotoyan.github.io/Chem324/ch02/demo_waves.html). You can copy paste and modify examples there to solve most challenges\n",
+        "\n",
+        "- Go over the [python, numpy and matploltib](https://dpotoyan.github.io/Chem324/demos/intro2py.html) basics to be more comfortable with the code.  \n",
         "\n",
         "**How to complete the work**\n",
         "- Run the cell below to import all necessary libraries.\n",
         "- Add code below each problem. \n",
         "- Run the code in Google Collab then download the file either as *.ipynb or *py file.\n",
-        "- Submit your file to Canvas\n",
-        "- Do not forget that Google Collab deletes files if you do not save them iin your Google Drive"
+        "- Submit your file to Canvas.\n",
+        "- Do not forget that Google Collab deletes files if you do not save them iin your Google Drive."
       ]
     },
     {
@@ -51,26 +52,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 2: Making traveling waves and creating interactive widgets.\n",
-        "\n",
-        "Using the examples provided on interactive section about waves make a 1D plots of the following functions over a range of values x. You may want to use python functions similiar to the examples <br>  Set $\\sigma=1$ and $\\lambda=1$ \n",
-        "- $f(x)=e^{-{x/\\sigma}^2}$ \n",
-        "- $g(x)=cos^2(2 \\pi\\frac{x}{\\lambda})$ \n",
-        "\n",
-        "2. Turn the above given functions into traveling wavea with angular velcotiy $\\omega=1$\n",
-        "\n",
-        "3. Create interactive widgets allowing you to varry wavelength, sigma parameter and angular velocity. \n",
-        "\n",
-        "4. turn traveling waves into standing waves. \n",
-        "\n",
-        "5. Write a brief report about what your observations. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Problem 3: Beats and music"
+        "### Problem 2: Beats and music"
       ]
     },
     {
@@ -96,7 +78,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 4 Interference of spherical waves"
+        "### Problem 3 Interference of spherical waves"
       ]
     },
     {
