--- a/ch02/bonus_waves.ipynb
+++ b/ch02/bonus_waves.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Bonus challenge \n",
+        "## DEMO: Bonus challenge\n",
         "\n",
         "**Waves, normal modes and interference** \n",
         "\n",
