--- a/_sources/ch02/demo_waves.ipynb
+++ b/_sources/ch02/demo_waves.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Okay we are not in Colab just proceed as if nothing happened\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np  \n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +29,14 @@
     "from scipy.constants import physical_constants, hbar, h, c, k, m_e, Rydberg, e, N_A\n",
     "\n",
     "%matplotlib inline\n",
-    "%config InlineBackend.figure_format='retina'"
+    "%config InlineBackend.figure_format='retina'\n",
+    "\n",
+    "try:\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
+    "    print('All good to go')\n",
+    "except:\n",
+    "    print('Okay we are not in Colab just proceed as if nothing happened')"
    ]
   },
   {
