--- a/ch03/operators.ipynb
+++ b/ch03/operators.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DEMO: Operators and eigenvalues"
+    "## DEMO: Postulates"
    ]
   },
   {
