--- a/ch02/demo_waves.ipynb
+++ b/ch02/demo_waves.ipynb
@@ -24,6 +24,7 @@
     "import numpy as np  \n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
     "from ipywidgets import interact, interactive\n",
     "import scipy  \n",
     "from scipy.constants import physical_constants, hbar, h, c, k, m_e, Rydberg, e, N_A\n",
@@ -73249,7 +73250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.8"
   },
   "nteract": {
    "version": "0.15.0"
