--- a/_sources/ch02/bonus_waves.ipynb
+++ b/_sources/ch02/bonus_waves.ipynb
@@ -29,7 +29,7 @@
       "source": [
         "import numpy as np  \n",
         "import matplotlib.pyplot as plt\n",
-        "from ipywidgets import interact\n",
+        "from ipywidgets import interact, interactive\n",
         "import scipy  \n",
         "from scipy.constants import physical_constants, hbar, h, c, k, m_e, Rydberg, e, N_A\n",
         "\n",
